--- a/workspace/aalia-landingpage-master/index.html
+++ b/workspace/aalia-landingpage-master/index.html
@@ -798,6 +798,8 @@
     <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
     <!-- JavaScript Libraries -->
+    <script src="https://kit.fontawesome.com/651e7fab34.js" crossorigin="anonymous"></script>
+
     <script src="lib/jquery/jquery.min.js"></script>
     <script src="lib/jquery/jquery-migrate.min.js"></script>
     <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
